@@ -1,0 +1,1 @@
+ALTER TABLE minuetServer_users MODIFY random_name VARCHAR(60) NOT NULL;
